# IrkPUMP

./: .gitignore  IrkPUMP v6.html  Makefile  README.md  app.py  borets.xlsx  calc_engine.py  gui.py  gui_new.py  irkpump_python.py  main.js  package-lock.json  package.json  preload.js  pump_manager.py  pumps.pkl  pyproject.toml  requirements.txt  schlumberger.xlsx
catalog/: novomet.xlsx  nt.xlsx  sample_pumps.xlsx
core/: calc.py
ui/: calculation_tab.py  catalog_tab.py  cavitation_tab.py  design_tab.py  forecast_tab.py  motor_tab.py  multiphase_tab.py  pump_selection_tab.py  results_tab.py
